last pushes, project is completed

--- a/kidlink/templates/administration/dashboard.html
+++ b/kidlink/templates/administration/dashboard.html
@@ -159,9 +159,7 @@
         </div>
         <div class="activity-details">
           <strong
-            >{{ activity.youth.first_name}} {{activity.youth.last_name}}</strong
-            
-          joined
+          >{{ activity.youth.first_name}} {{activity.youth.last_name}} joined </strong
           <strong>{{ activity.activity.activity_name }}</strong>
         </div>
         <div class="activity-date">
